<resources>
    <string name="app_name">TrackingTravel</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Начать путь</string>
    <string name="start_text_1">Добро пожаловать в Tracking Travel</string>
    <string name="start_text_2">Tracking Travel позволяет легко найти маршруты по Черногории</string>
    <string name="req_text_1">Предоставьте доступ к GPS Вашего телефона</string>
    <string name="req_text_2">Ваше местоположение будет использоваться для отображения Вашей позиции на карте</string>
    <string name="allow">Разрешить</string>
    <string name="ignore">Пропустить</string>
    <string name="route">Маршруты</string>
    <string name="duration">Длительность</string>
    <string name="setting">Настройки</string>
    <string name="route_name">Название маршрута</string>
    <string name="open_map">Открыть карту</string>
    <string name="distanse">Расстояние</string>
    <string name="point">Высшая точка</string>
    <string name="show_description">Показать описание маршрута</string>
    <string name="description">Начальная точка: Даниловград, Подгорица Состав маршрута: гора Милунова
        Бобия высотой 1436 м (3 часа, перепад высот — 686 м), гора Маглич высотой 1560 м (4 часа,
        перепад высот — 695 м), гора Трескавац высотой 2024 м (4 часа, перепад высот — 670 м),
        гора Сурдуп высотой 2184 м (5 часов, перепад высот — 900 м).</string>
    <string name="toast_denied">В разрешении отказано</string>
    <string name="toast_denied_forever">В разрешении отказано навсегда</string>
    <string name="alert_dialog_title">В разрешении отказано</string>
    <string name="alert_dialog_message">В разрешении отказано навсегда.
    Вы можете изменить это в настройках телефона.
    Хотите перейти в настройки?</string>
    <string name="alert_dialog_set_positive">Перейти</string>
    <string name="toast_GPS_on">Геолокация включена</string>







</resources>



