<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    android:id="@+id/item_container"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"

    android:layout_height="match_parent"
    tools:context=".StartFragment">

    <androidx.cardview.widget.CardView
        android:id="@+id/item_container"
        style="@style/card_style"
        android:layout_marginStart="20dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="25dp"
        app:layout_constraintBottom_toTopOf="@+id/tvStartOne"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

    android:layout_height="400dp"
    android:elevation="2dp"
    app:cardCornerRadius="15dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/view"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:scaleType="centerCrop"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:src="@drawable/random_photo" />

        <TextView
            android:id="@+id/tv_rv_item_title"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="40dp"
            android:text="Здесь будет какое-то название"
            android:textSize="22sp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/tvStartOne"
        style="@style/text_view_style"
        android:layout_marginStart="50dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="10dp"
        android:text="@string/start_text_1"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/twStartTwo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/twStartTwo"
        style="@style/text_view_style"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="50dp"
        android:layout_marginBottom="25dp"
        android:text="@string/start_text_2"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/btnBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btnBtn"
        style="@style/Button_Start"
        android:textAllCaps="false"
        android:text="@string/start"
        android:stateListAnimator="@null"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.95" />

        <ImageView
            android:id="@+id/iv_rv_item_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="13dp"
            android:layout_marginBottom="17dp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_rv_item_title"
            app:srcCompat="@drawable/ic_baseline_access_time_24" />

        <TextView
            android:id="@+id/tv_rv_item_1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginBottom="17dp"
            android:text="Время"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintStart_toEndOf="@+id/iv_rv_item_1"
            app:layout_constraintTop_toBottomOf="@+id/tv_rv_item_title" />

        <ImageView
            android:id="@+id/iv_rv_item_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="18dp"
            android:layout_marginStart="10dp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintStart_toEndOf="@+id/tv_rv_item_1"
            app:layout_constraintTop_toBottomOf="@+id/tv_rv_item_title"
            app:srcCompat="@drawable/ic_outline_near_me_24" />

        <TextView
            android:id="@+id/tv_rv_item_2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginBottom="17dp"
            android:text="Расстояние"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintStart_toEndOf="@+id/iv_rv_item_2"
            app:layout_constraintTop_toBottomOf="@+id/tv_rv_item_title" />

        <ImageView
            android:id="@+id/iv_rv_item_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginBottom="18dp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintStart_toEndOf="@+id/tv_rv_item_2"
            app:layout_constraintTop_toBottomOf="@+id/tv_rv_item_title"
            app:srcCompat="@drawable/ic_round_terrain_24" />

        <TextView
            android:id="@+id/tv_rv_item_3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginBottom="17dp"
            android:text="Высота"
            android:textColor="@color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="@+id/view"
            app:layout_constraintStart_toEndOf="@+id/iv_rv_item_3"
            app:layout_constraintTop_toBottomOf="@+id/tv_rv_item_title" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>
